backend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement
Rule 3     statements -> statements statement
Rule 4     statement -> declaration
Rule 5     statement -> assignment
Rule 6     statement -> if_stmt
Rule 7     statement -> while_stmt
Rule 8     statement -> for_stmt
Rule 9     statement -> break_stmt
Rule 10    statement -> return_stmt
Rule 11    statement -> call_stmt
Rule 12    declaration -> INT declarator_list SEMICOLON
Rule 13    declarator_list -> declarator
Rule 14    declarator_list -> declarator_list COMMA declarator
Rule 15    declarator -> ID
Rule 16    declarator -> ID ASSIGN expression
Rule 17    assignment -> ID ASSIGN expression SEMICOLON
Rule 18    block -> LBRACE statements_opt RBRACE
Rule 19    statements_opt -> empty
Rule 20    statements_opt -> statements
Rule 21    if_stmt -> IF LPAREN expression RPAREN block
Rule 22    if_stmt -> IF LPAREN expression RPAREN block ELSE block
Rule 23    if_stmt -> IF LPAREN expression RPAREN block ELSE if_stmt
Rule 24    while_stmt -> WHILE LPAREN expression RPAREN block
Rule 25    for_stmt -> FOR LPAREN for_init SEMICOLON for_condition SEMICOLON for_update RPAREN block
Rule 26    for_init -> empty
Rule 27    for_init -> declaration_head
Rule 28    for_init -> assignment_head
Rule 29    for_condition -> empty
Rule 30    for_condition -> expression
Rule 31    for_update -> empty
Rule 32    for_update -> assignment_head
Rule 33    for_update -> increment_head
Rule 34    declaration_head -> INT declarator_list
Rule 35    assignment_head -> ID ASSIGN expression
Rule 36    increment_head -> ID INCREMENT
Rule 37    break_stmt -> BREAK SEMICOLON
Rule 38    return_stmt -> RETURN expression SEMICOLON
Rule 39    call_stmt -> ID LPAREN arguments_opt RPAREN SEMICOLON
Rule 40    arguments_opt -> empty
Rule 41    arguments_opt -> arguments
Rule 42    arguments -> expression
Rule 43    arguments -> arguments COMMA expression
Rule 44    expression -> expression PLUS term
Rule 45    expression -> expression MINUS term
Rule 46    expression -> expression EQ term
Rule 47    expression -> expression NE term
Rule 48    expression -> expression LT term
Rule 49    expression -> expression LE term
Rule 50    expression -> expression GT term
Rule 51    expression -> expression GE term
Rule 52    expression -> term
Rule 53    term -> term TIMES factor
Rule 54    term -> term DIVIDE factor
Rule 55    term -> factor
Rule 56    factor -> NUMBER
Rule 57    factor -> STRING
Rule 58    factor -> ID
Rule 59    factor -> TRUE
Rule 60    factor -> FALSE
Rule 61    factor -> LPAREN expression RPAREN
Rule 62    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 16 17 35
BREAK                : 37
COMMA                : 14 43
DIVIDE               : 54
ELSE                 : 22 23
EQ                   : 46
FALSE                : 60
FOR                  : 25
GE                   : 51
GT                   : 50
ID                   : 15 16 17 35 36 39 58
IF                   : 21 22 23
INCREMENT            : 36
INT                  : 12 34
LBRACE               : 18
LE                   : 49
LPAREN               : 21 22 23 24 25 39 61
LT                   : 48
MINUS                : 45
NE                   : 47
NUMBER               : 56
PLUS                 : 44
RBRACE               : 18
RETURN               : 38
RPAREN               : 21 22 23 24 25 39 61
SEMICOLON            : 12 17 25 25 37 38 39
STRING               : 57
TIMES                : 53
TRUE                 : 59
WHILE                : 24
error                : 

Nonterminals, with rules where they appear

arguments            : 41 43
arguments_opt        : 39
assignment           : 5
assignment_head      : 28 32
block                : 21 22 22 23 24 25
break_stmt           : 9
call_stmt            : 11
declaration          : 4
declaration_head     : 27
declarator           : 13 14
declarator_list      : 12 14 34
empty                : 19 26 29 31 40
expression           : 16 17 21 22 23 24 30 35 38 42 43 44 45 46 47 48 49 50 51 61
factor               : 53 54 55
for_condition        : 25
for_init             : 25
for_stmt             : 8
for_update           : 25
if_stmt              : 6 23
increment_head       : 33
program              : 0
return_stmt          : 10
statement            : 2 3
statements           : 1 3 20
statements_opt       : 18
term                 : 44 45 46 47 48 49 50 51 52 53 54
while_stmt           : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . if_stmt
    (7) statement -> . while_stmt
    (8) statement -> . for_stmt
    (9) statement -> . break_stmt
    (10) statement -> . return_stmt
    (11) statement -> . call_stmt
    (12) declaration -> . INT declarator_list SEMICOLON
    (17) assignment -> . ID ASSIGN expression SEMICOLON
    (21) if_stmt -> . IF LPAREN expression RPAREN block
    (22) if_stmt -> . IF LPAREN expression RPAREN block ELSE block
    (23) if_stmt -> . IF LPAREN expression RPAREN block ELSE if_stmt
    (24) while_stmt -> . WHILE LPAREN expression RPAREN block
    (25) for_stmt -> . FOR LPAREN for_init SEMICOLON for_condition SEMICOLON for_update RPAREN block
    (37) break_stmt -> . BREAK SEMICOLON
    (38) return_stmt -> . RETURN expression SEMICOLON
    (39) call_stmt -> . ID LPAREN arguments_opt RPAREN SEMICOLON

    INT             shift and go to state 12
    ID              shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    BREAK           shift and go to state 17
    RETURN          shift and go to state 18

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    if_stmt                        shift and go to state 6
    while_stmt                     shift and go to state 7
    for_stmt                       shift and go to state 8
    break_stmt                     shift and go to state 9
    return_stmt                    shift and go to state 10
    call_stmt                      shift and go to state 11

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . if_stmt
    (7) statement -> . while_stmt
    (8) statement -> . for_stmt
    (9) statement -> . break_stmt
    (10) statement -> . return_stmt
    (11) statement -> . call_stmt
    (12) declaration -> . INT declarator_list SEMICOLON
    (17) assignment -> . ID ASSIGN expression SEMICOLON
    (21) if_stmt -> . IF LPAREN expression RPAREN block
    (22) if_stmt -> . IF LPAREN expression RPAREN block ELSE block
    (23) if_stmt -> . IF LPAREN expression RPAREN block ELSE if_stmt
    (24) while_stmt -> . WHILE LPAREN expression RPAREN block
    (25) for_stmt -> . FOR LPAREN for_init SEMICOLON for_condition SEMICOLON for_update RPAREN block
    (37) break_stmt -> . BREAK SEMICOLON
    (38) return_stmt -> . RETURN expression SEMICOLON
    (39) call_stmt -> . ID LPAREN arguments_opt RPAREN SEMICOLON

    $end            reduce using rule 1 (program -> statements .)
    INT             shift and go to state 12
    ID              shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    BREAK           shift and go to state 17
    RETURN          shift and go to state 18

    statement                      shift and go to state 19
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    if_stmt                        shift and go to state 6
    while_stmt                     shift and go to state 7
    for_stmt                       shift and go to state 8
    break_stmt                     shift and go to state 9
    return_stmt                    shift and go to state 10
    call_stmt                      shift and go to state 11

state 3

    (2) statements -> statement .

    INT             reduce using rule 2 (statements -> statement .)
    ID              reduce using rule 2 (statements -> statement .)
    IF              reduce using rule 2 (statements -> statement .)
    WHILE           reduce using rule 2 (statements -> statement .)
    FOR             reduce using rule 2 (statements -> statement .)
    BREAK           reduce using rule 2 (statements -> statement .)
    RETURN          reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    RBRACE          reduce using rule 2 (statements -> statement .)


state 4

    (4) statement -> declaration .

    INT             reduce using rule 4 (statement -> declaration .)
    ID              reduce using rule 4 (statement -> declaration .)
    IF              reduce using rule 4 (statement -> declaration .)
    WHILE           reduce using rule 4 (statement -> declaration .)
    FOR             reduce using rule 4 (statement -> declaration .)
    BREAK           reduce using rule 4 (statement -> declaration .)
    RETURN          reduce using rule 4 (statement -> declaration .)
    $end            reduce using rule 4 (statement -> declaration .)
    RBRACE          reduce using rule 4 (statement -> declaration .)


state 5

    (5) statement -> assignment .

    INT             reduce using rule 5 (statement -> assignment .)
    ID              reduce using rule 5 (statement -> assignment .)
    IF              reduce using rule 5 (statement -> assignment .)
    WHILE           reduce using rule 5 (statement -> assignment .)
    FOR             reduce using rule 5 (statement -> assignment .)
    BREAK           reduce using rule 5 (statement -> assignment .)
    RETURN          reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)
    RBRACE          reduce using rule 5 (statement -> assignment .)


state 6

    (6) statement -> if_stmt .

    INT             reduce using rule 6 (statement -> if_stmt .)
    ID              reduce using rule 6 (statement -> if_stmt .)
    IF              reduce using rule 6 (statement -> if_stmt .)
    WHILE           reduce using rule 6 (statement -> if_stmt .)
    FOR             reduce using rule 6 (statement -> if_stmt .)
    BREAK           reduce using rule 6 (statement -> if_stmt .)
    RETURN          reduce using rule 6 (statement -> if_stmt .)
    $end            reduce using rule 6 (statement -> if_stmt .)
    RBRACE          reduce using rule 6 (statement -> if_stmt .)


state 7

    (7) statement -> while_stmt .

    INT             reduce using rule 7 (statement -> while_stmt .)
    ID              reduce using rule 7 (statement -> while_stmt .)
    IF              reduce using rule 7 (statement -> while_stmt .)
    WHILE           reduce using rule 7 (statement -> while_stmt .)
    FOR             reduce using rule 7 (statement -> while_stmt .)
    BREAK           reduce using rule 7 (statement -> while_stmt .)
    RETURN          reduce using rule 7 (statement -> while_stmt .)
    $end            reduce using rule 7 (statement -> while_stmt .)
    RBRACE          reduce using rule 7 (statement -> while_stmt .)


state 8

    (8) statement -> for_stmt .

    INT             reduce using rule 8 (statement -> for_stmt .)
    ID              reduce using rule 8 (statement -> for_stmt .)
    IF              reduce using rule 8 (statement -> for_stmt .)
    WHILE           reduce using rule 8 (statement -> for_stmt .)
    FOR             reduce using rule 8 (statement -> for_stmt .)
    BREAK           reduce using rule 8 (statement -> for_stmt .)
    RETURN          reduce using rule 8 (statement -> for_stmt .)
    $end            reduce using rule 8 (statement -> for_stmt .)
    RBRACE          reduce using rule 8 (statement -> for_stmt .)


state 9

    (9) statement -> break_stmt .

    INT             reduce using rule 9 (statement -> break_stmt .)
    ID              reduce using rule 9 (statement -> break_stmt .)
    IF              reduce using rule 9 (statement -> break_stmt .)
    WHILE           reduce using rule 9 (statement -> break_stmt .)
    FOR             reduce using rule 9 (statement -> break_stmt .)
    BREAK           reduce using rule 9 (statement -> break_stmt .)
    RETURN          reduce using rule 9 (statement -> break_stmt .)
    $end            reduce using rule 9 (statement -> break_stmt .)
    RBRACE          reduce using rule 9 (statement -> break_stmt .)


state 10

    (10) statement -> return_stmt .

    INT             reduce using rule 10 (statement -> return_stmt .)
    ID              reduce using rule 10 (statement -> return_stmt .)
    IF              reduce using rule 10 (statement -> return_stmt .)
    WHILE           reduce using rule 10 (statement -> return_stmt .)
    FOR             reduce using rule 10 (statement -> return_stmt .)
    BREAK           reduce using rule 10 (statement -> return_stmt .)
    RETURN          reduce using rule 10 (statement -> return_stmt .)
    $end            reduce using rule 10 (statement -> return_stmt .)
    RBRACE          reduce using rule 10 (statement -> return_stmt .)


state 11

    (11) statement -> call_stmt .

    INT             reduce using rule 11 (statement -> call_stmt .)
    ID              reduce using rule 11 (statement -> call_stmt .)
    IF              reduce using rule 11 (statement -> call_stmt .)
    WHILE           reduce using rule 11 (statement -> call_stmt .)
    FOR             reduce using rule 11 (statement -> call_stmt .)
    BREAK           reduce using rule 11 (statement -> call_stmt .)
    RETURN          reduce using rule 11 (statement -> call_stmt .)
    $end            reduce using rule 11 (statement -> call_stmt .)
    RBRACE          reduce using rule 11 (statement -> call_stmt .)


state 12

    (12) declaration -> INT . declarator_list SEMICOLON
    (13) declarator_list -> . declarator
    (14) declarator_list -> . declarator_list COMMA declarator
    (15) declarator -> . ID
    (16) declarator -> . ID ASSIGN expression

    ID              shift and go to state 22

    declarator_list                shift and go to state 20
    declarator                     shift and go to state 21

state 13

    (17) assignment -> ID . ASSIGN expression SEMICOLON
    (39) call_stmt -> ID . LPAREN arguments_opt RPAREN SEMICOLON

    ASSIGN          shift and go to state 23
    LPAREN          shift and go to state 24


state 14

    (21) if_stmt -> IF . LPAREN expression RPAREN block
    (22) if_stmt -> IF . LPAREN expression RPAREN block ELSE block
    (23) if_stmt -> IF . LPAREN expression RPAREN block ELSE if_stmt

    LPAREN          shift and go to state 25


state 15

    (24) while_stmt -> WHILE . LPAREN expression RPAREN block

    LPAREN          shift and go to state 26


state 16

    (25) for_stmt -> FOR . LPAREN for_init SEMICOLON for_condition SEMICOLON for_update RPAREN block

    LPAREN          shift and go to state 27


state 17

    (37) break_stmt -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 28


state 18

    (38) return_stmt -> RETURN . expression SEMICOLON
    (44) expression -> . expression PLUS term
    (45) expression -> . expression MINUS term
    (46) expression -> . expression EQ term
    (47) expression -> . expression NE term
    (48) expression -> . expression LT term
    (49) expression -> . expression LE term
    (50) expression -> . expression GT term
    (51) expression -> . expression GE term
    (52) expression -> . term
    (53) term -> . term TIMES factor
    (54) term -> . term DIVIDE factor
    (55) term -> . factor
    (56) factor -> . NUMBER
    (57) factor -> . STRING
    (58) factor -> . ID
    (59) factor -> . TRUE
    (60) factor -> . FALSE
    (61) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 32
    STRING          shift and go to state 33
    ID              shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    LPAREN          shift and go to state 37

    expression                     shift and go to state 29
    term                           shift and go to state 30
    factor                         shift and go to state 31

state 19

    (3) statements -> statements statement .

    INT             reduce using rule 3 (statements -> statements statement .)
    ID              reduce using rule 3 (statements -> statements statement .)
    IF              reduce using rule 3 (statements -> statements statement .)
    WHILE           reduce using rule 3 (statements -> statements statement .)
    FOR             reduce using rule 3 (statements -> statements statement .)
    BREAK           reduce using rule 3 (statements -> statements statement .)
    RETURN          reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)
    RBRACE          reduce using rule 3 (statements -> statements statement .)


state 20

    (12) declaration -> INT declarator_list . SEMICOLON
    (14) declarator_list -> declarator_list . COMMA declarator

    SEMICOLON       shift and go to state 38
    COMMA           shift and go to state 39


state 21

    (13) declarator_list -> declarator .

    SEMICOLON       reduce using rule 13 (declarator_list -> declarator .)
    COMMA           reduce using rule 13 (declarator_list -> declarator .)


state 22

    (15) declarator -> ID .
    (16) declarator -> ID . ASSIGN expression

    SEMICOLON       reduce using rule 15 (declarator -> ID .)
    COMMA           reduce using rule 15 (declarator -> ID .)
    ASSIGN          shift and go to state 40


state 23

    (17) assignment -> ID ASSIGN . expression SEMICOLON
    (44) expression -> . expression PLUS term
    (45) expression -> . expression MINUS term
    (46) expression -> . expression EQ term
    (47) expression -> . expression NE term
    (48) expression -> . expression LT term
    (49) expression -> . expression LE term
    (50) expression -> . expression GT term
    (51) expression -> . expression GE term
    (52) expression -> . term
    (53) term -> . term TIMES factor
    (54) term -> . term DIVIDE factor
    (55) term -> . factor
    (56) factor -> . NUMBER
    (57) factor -> . STRING
    (58) factor -> . ID
    (59) factor -> . TRUE
    (60) factor -> . FALSE
    (61) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 32
    STRING          shift and go to state 33
    ID              shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    LPAREN          shift and go to state 37

    expression                     shift and go to state 41
    term                           shift and go to state 30
    factor                         shift and go to state 31

state 24

    (39) call_stmt -> ID LPAREN . arguments_opt RPAREN SEMICOLON
    (40) arguments_opt -> . empty
    (41) arguments_opt -> . arguments
    (62) empty -> .
    (42) arguments -> . expression
    (43) arguments -> . arguments COMMA expression
    (44) expression -> . expression PLUS term
    (45) expression -> . expression MINUS term
    (46) expression -> . expression EQ term
    (47) expression -> . expression NE term
    (48) expression -> . expression LT term
    (49) expression -> . expression LE term
    (50) expression -> . expression GT term
    (51) expression -> . expression GE term
    (52) expression -> . term
    (53) term -> . term TIMES factor
    (54) term -> . term DIVIDE factor
    (55) term -> . factor
    (56) factor -> . NUMBER
    (57) factor -> . STRING
    (58) factor -> . ID
    (59) factor -> . TRUE
    (60) factor -> . FALSE
    (61) factor -> . LPAREN expression RPAREN

    RPAREN          reduce using rule 62 (empty -> .)
    NUMBER          shift and go to state 32
    STRING          shift and go to state 33
    ID              shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    LPAREN          shift and go to state 37

    arguments_opt                  shift and go to state 42
    empty                          shift and go to state 43
    arguments                      shift and go to state 44
    expression                     shift and go to state 45
    term                           shift and go to state 30
    factor                         shift and go to state 31

state 25

    (21) if_stmt -> IF LPAREN . expression RPAREN block
    (22) if_stmt -> IF LPAREN . expression RPAREN block ELSE block
    (23) if_stmt -> IF LPAREN . expression RPAREN block ELSE if_stmt
    (44) expression -> . expression PLUS term
    (45) expression -> . expression MINUS term
    (46) expression -> . expression EQ term
    (47) expression -> . expression NE term
    (48) expression -> . expression LT term
    (49) expression -> . expression LE term
    (50) expression -> . expression GT term
    (51) expression -> . expression GE term
    (52) expression -> . term
    (53) term -> . term TIMES factor
    (54) term -> . term DIVIDE factor
    (55) term -> . factor
    (56) factor -> . NUMBER
    (57) factor -> . STRING
    (58) factor -> . ID
    (59) factor -> . TRUE
    (60) factor -> . FALSE
    (61) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 32
    STRING          shift and go to state 33
    ID              shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    LPAREN          shift and go to state 37

    expression                     shift and go to state 46
    term                           shift and go to state 30
    factor                         shift and go to state 31

state 26

    (24) while_stmt -> WHILE LPAREN . expression RPAREN block
    (44) expression -> . expression PLUS term
    (45) expression -> . expression MINUS term
    (46) expression -> . expression EQ term
    (47) expression -> . expression NE term
    (48) expression -> . expression LT term
    (49) expression -> . expression LE term
    (50) expression -> . expression GT term
    (51) expression -> . expression GE term
    (52) expression -> . term
    (53) term -> . term TIMES factor
    (54) term -> . term DIVIDE factor
    (55) term -> . factor
    (56) factor -> . NUMBER
    (57) factor -> . STRING
    (58) factor -> . ID
    (59) factor -> . TRUE
    (60) factor -> . FALSE
    (61) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 32
    STRING          shift and go to state 33
    ID              shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    LPAREN          shift and go to state 37

    expression                     shift and go to state 47
    term                           shift and go to state 30
    factor                         shift and go to state 31

state 27

    (25) for_stmt -> FOR LPAREN . for_init SEMICOLON for_condition SEMICOLON for_update RPAREN block
    (26) for_init -> . empty
    (27) for_init -> . declaration_head
    (28) for_init -> . assignment_head
    (62) empty -> .
    (34) declaration_head -> . INT declarator_list
    (35) assignment_head -> . ID ASSIGN expression

    SEMICOLON       reduce using rule 62 (empty -> .)
    INT             shift and go to state 52
    ID              shift and go to state 53

    for_init                       shift and go to state 48
    empty                          shift and go to state 49
    declaration_head               shift and go to state 50
    assignment_head                shift and go to state 51

state 28

    (37) break_stmt -> BREAK SEMICOLON .

    INT             reduce using rule 37 (break_stmt -> BREAK SEMICOLON .)
    ID              reduce using rule 37 (break_stmt -> BREAK SEMICOLON .)
    IF              reduce using rule 37 (break_stmt -> BREAK SEMICOLON .)
    WHILE           reduce using rule 37 (break_stmt -> BREAK SEMICOLON .)
    FOR             reduce using rule 37 (break_stmt -> BREAK SEMICOLON .)
    BREAK           reduce using rule 37 (break_stmt -> BREAK SEMICOLON .)
    RETURN          reduce using rule 37 (break_stmt -> BREAK SEMICOLON .)
    $end            reduce using rule 37 (break_stmt -> BREAK SEMICOLON .)
    RBRACE          reduce using rule 37 (break_stmt -> BREAK SEMICOLON .)


state 29

    (38) return_stmt -> RETURN expression . SEMICOLON
    (44) expression -> expression . PLUS term
    (45) expression -> expression . MINUS term
    (46) expression -> expression . EQ term
    (47) expression -> expression . NE term
    (48) expression -> expression . LT term
    (49) expression -> expression . LE term
    (50) expression -> expression . GT term
    (51) expression -> expression . GE term

    SEMICOLON       shift and go to state 54
    PLUS            shift and go to state 55
    MINUS           shift and go to state 56
    EQ              shift and go to state 57
    NE              shift and go to state 58
    LT              shift and go to state 59
    LE              shift and go to state 60
    GT              shift and go to state 61
    GE              shift and go to state 62


state 30

    (52) expression -> term .
    (53) term -> term . TIMES factor
    (54) term -> term . DIVIDE factor

    SEMICOLON       reduce using rule 52 (expression -> term .)
    PLUS            reduce using rule 52 (expression -> term .)
    MINUS           reduce using rule 52 (expression -> term .)
    EQ              reduce using rule 52 (expression -> term .)
    NE              reduce using rule 52 (expression -> term .)
    LT              reduce using rule 52 (expression -> term .)
    LE              reduce using rule 52 (expression -> term .)
    GT              reduce using rule 52 (expression -> term .)
    GE              reduce using rule 52 (expression -> term .)
    COMMA           reduce using rule 52 (expression -> term .)
    RPAREN          reduce using rule 52 (expression -> term .)
    TIMES           shift and go to state 63
    DIVIDE          shift and go to state 64


state 31

    (55) term -> factor .

    TIMES           reduce using rule 55 (term -> factor .)
    DIVIDE          reduce using rule 55 (term -> factor .)
    SEMICOLON       reduce using rule 55 (term -> factor .)
    PLUS            reduce using rule 55 (term -> factor .)
    MINUS           reduce using rule 55 (term -> factor .)
    EQ              reduce using rule 55 (term -> factor .)
    NE              reduce using rule 55 (term -> factor .)
    LT              reduce using rule 55 (term -> factor .)
    LE              reduce using rule 55 (term -> factor .)
    GT              reduce using rule 55 (term -> factor .)
    GE              reduce using rule 55 (term -> factor .)
    COMMA           reduce using rule 55 (term -> factor .)
    RPAREN          reduce using rule 55 (term -> factor .)


state 32

    (56) factor -> NUMBER .

    TIMES           reduce using rule 56 (factor -> NUMBER .)
    DIVIDE          reduce using rule 56 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 56 (factor -> NUMBER .)
    PLUS            reduce using rule 56 (factor -> NUMBER .)
    MINUS           reduce using rule 56 (factor -> NUMBER .)
    EQ              reduce using rule 56 (factor -> NUMBER .)
    NE              reduce using rule 56 (factor -> NUMBER .)
    LT              reduce using rule 56 (factor -> NUMBER .)
    LE              reduce using rule 56 (factor -> NUMBER .)
    GT              reduce using rule 56 (factor -> NUMBER .)
    GE              reduce using rule 56 (factor -> NUMBER .)
    COMMA           reduce using rule 56 (factor -> NUMBER .)
    RPAREN          reduce using rule 56 (factor -> NUMBER .)


state 33

    (57) factor -> STRING .

    TIMES           reduce using rule 57 (factor -> STRING .)
    DIVIDE          reduce using rule 57 (factor -> STRING .)
    SEMICOLON       reduce using rule 57 (factor -> STRING .)
